ai-data-masking/deploy_dev/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          scheme_header_transformation:
            scheme_to_overwrite: https
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: outbound|8000||172.22.220.21.static
          http_filters:
          - name: ai-data-masking
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: ai-data-masking
                  vm_config:
                    runtime: envoy.wasm.runtime.v8
                    code:
                      local:
                        filename: /etc/envoy/main.wasm
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: |
                      {
                        "deny_openai": true,
                        "deny_raw": true,
                        "deny_jsonpath": [
                          "prompt",
                          "input.messages.#.content.0.text"
                        ],
                        "system_deny": false,
                        "deny_code": 403,
                        "deny_message": "提问或回答中包含敏感词，已被屏蔽",
                        "deny_raw_message": "{\"errmsg\":\"提问或回答中包含敏感词，已被屏蔽\"}",
                        "deny_content_type": "application/json",
                        "deny_words": [
                          "测试敏感词",
                          "违规内容"
                        ],
                        "replace_roles": [
                          {
                            "regex": "%{MOBILE}",
                            "type": "replace",
                            "restore": false,
                            "value": "[xxxx]"
                          },
                          {
                            "regex": "%{IP}",
                            "type": "replace",
                            "restore": true,
                            "value": "a.b.c.d"
                          },
                          {
                            "regex": "%{IDCARD}",
                            "type": "replace",
                            "restore": false,
                            "value": "****"
                          },
                          {
                            "regex": "sk-[0-9a-zA-Z]*",
                            "type": "hash",
                            "restore": true,
                            "value": ""
                          }
                        ]
                      }
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: httpbin
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin
                port_value: 80
    # 静态IP (使用 HTTP，端口 8000)
  - name: outbound|8000||172.22.220.21.static
    connect_timeout: 30s
    type: STATIC
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: outbound|8000||172.22.220.21.static
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.22.220.21
                port_value: 8000
